fix: solución ejercicio 1.7

--- a/main.tex
+++ b/main.tex
@@ -280,17 +280,17 @@ Finalmente, aquí está el problema. Demuestra que para cualquier patrón especi
 
 \textbf{Figura 1.8} Un ejemplo con dos cables de entrada y dos cables de salida. La entrada 1 tiene su unión con la salida 2 aguas arriba de su unión con la salida 1; la entrada 2 tiene su unión con la salida 1 aguas arriba de su unión con la salida 2. Una solución válida es cambiar el flujo de datos de la entrada 1 a la salida 2, y el flujo de datos de la entrada 2 a la salida 1. Por otro lado, si el flujo de la entrada 1 se cambiara a la salida 1, y el flujo de la entrada 2 se cambiara a la salida 2, entonces ambos flujos pasarían a través de la caja de unión en el punto de encuentro de la entrada 1 y la salida 2 -- y esto no está permitido.\\
 
-\textbf{Solución:} Un switching consiste precisamente en una correspondencia perfecta entre los cables de entrada y los cables de salida | simplemente necesitamos elegir qué flujo de entrada será cambiado a qué cable de salida.\\
+\textbf{Solución:} Un enrutamiento consiste precisamente en una correspondencia perfecta entre los cables de entrada y los cables de salida -- simplemente necesitamos elegir qué flujo de entrada será conmutado a qué cable de salida.\\
 
 Desde el punto de vista de un cable de entrada, desea que su flujo de datos sea cambiado lo más temprano posible (cerca de la fuente): esto minimiza el riesgo de encontrarse con otro flujo de datos, que ya ha sido cambiado, en una caja de conexiones. Desde el punto de vista de un cable de salida, desea que un flujo de datos sea cambiado a él lo más tarde posible (lejos de la fuente): esto minimiza el riesgo de encontrarse con otro flujo de datos, que aún no ha sido cambiado, en una caja de conexiones.\\
 
 Motivados por esta intuición, establecemos un problema de "matrimonio estable" que involucra a los cables de entrada y los cables de salida. Cada cable de entrada clasifica los cables de salida en el orden en que los encuentra desde la fuente hasta el terminal; cada cable de salida clasifica los cables de entrada en el orden inverso en que los encuentra desde la fuente hasta el terminal. Ahora mostramos:\\
 
-Una correspondencia estable entre los cables de entrada y los cables de salida define un cambio válido. \\
+\textit{Una emparejamiento estable entre los cables de entrada y los cables de salida define un cambio válido.} \\
 
-Para demostrar esto, supongamos que este cambio hace que dos flujos de datos se crucen en una caja de conexiones. Supongamos que la caja de conexiones está en el punto de encuentro del Cable de entrada i y el Cable de salida j. Entonces, uno de los flujos debe ser el que se origina en el Cable de entrada i; el otro flujo debe haber cambiado desde un cable de entrada diferente, digamos el Cable de entrada k, hacia el Cable de salida j. Pero en este caso, el Cable de salida j prefiere el Cable de entrada i al Cable de entrada k (ya que j se encuentra con i más abajo que con k); y el Cable de entrada i prefiere el Cable de salida j al cable de salida, digamos el Cable de salida , al cual está realmente conectado | ya que se encuentra con el Cable de salida j aguas arriba del Cable de salida . Esto contradice la suposición de que hemos elegido una correspondencia estable entre los cables de entrada y los cables de salida.\\
+Para demostrar esto, supongamos que este cambio hace que dos flujos de datos se crucen en una caja de conexiones. Supongamos que la caja de conexiones está en el punto de encuentro del cable de entrada $i$ y el cable de salida $j$. Entonces, uno de los flujos debe ser el que se origina en el cable de entrada $i$; el otro flujo debe haber cambiado desde un cable de entrada diferente, digamos el cable de entrada $k$, hacia el cable de salida $j$. Pero en este caso, el cable de salida $j$ prefiere el cable de entrada $i$ al cable de entrada $k$ (ya que $j$ se encuentra con $i$ más abajo que con $k$); y el cable de entrada $i$ prefiere el cable de salida $j$ al cable de salida, digamos el cable de salida $l$, al cual está realmente conectado -- ya que se encuentra con el cable de salida $j$ aguas arriba del Cable de salida . Esto contradice la suposición de que hemos elegido un emparejamiento estable entre los cables de entrada y los cables de salida.\\
 
-Suponiendo que las intersecciones de los cables de entrada y los cables de salida están representadas por listas que contienen el orden en que cada cable se encuentra con los otros cables, podemos establecer las listas de preferencias para el problema de la correspondencia estable en tiempo $O(n^2)$. Calcular la correspondencia estable luego requiere tiempo adicional de $O(n^2)$.
+Suponiendo que las intersecciones de los cables de entrada y los cables de salida están representadas por listas que contienen el orden en que cada cable se encuentra con los otros cables, podemos establecer las listas de preferencias para el problema del emparejamiento estable en tiempo $\mathcal{O}(n^2)$. Calcular el emparejamiento estable luego requiere tiempo adicional de $\mathcal{O}(n^2)$.
  
 
 \newpage
