--- a/main.tex
+++ b/main.tex
@@ -54,7 +54,7 @@ Por tanto, en esta situación, es imposible que $m_1$ y $m_2$ estén emparejados
 
 \newpage
 
-\subsection{Ejercicio 1.2}
+\subsection{Ejercicio 1.2 (Práctico 1.1) }
 Decide si crees que la siguiente afirmación es verdadera o falsa. Si es verdadera, proporciona una breve explicación. Si es falsa, proporciona un contraejemplo.\\
 
 \emph{¿Verdadero o falso? Considera una instancia del Problema de Emparejamiento Estable en la que existe un hombre m y una mujer w tal que m está clasificado en primer lugar en la lista de preferencias de w y w está clasificada en primer lugar en la lista de preferencias de m. Entonces, en todo emparejamiento estable S para esta instancia, el par (m, w) pertenece a S.}\\
@@ -93,7 +93,7 @@ Por otro lado, si la Red $Y$ elige el horario $\{y_2, y_3, y_1\}$ y la Red X eli
 En ambos casos, no se puede encontrar una pareja estable de horarios, demostrando que no siempre existe una pareja estable de horarios para cualquier conjunto de programas y calificaciones.
 
 
-\subsection{Ejercicio 1.4}
+\subsection{Ejercicio 1.4 (Práctico 1.3) }
 Gale y Shapley publicaron su artículo sobre el Problema de Emparejamiento Estable en 1962; sin embargo, una versión de su algoritmo ya se había estado utilizando durante diez años en el Programa Nacional de Asignación de Residentes, para el problema de asignar residentes médicos a hospitales.\\
 
 Básicamente, la situación era la siguiente. Había m hospitales, cada uno con un cierto número de posiciones disponibles para contratar residentes médicos. Había n estudiantes de medicina que se graduaban en un año determinado, interesados en unirse a uno de los hospitales. Cada hospital tenía una clasificación de los estudiantes en orden de preferencia, y cada estudiante tenía una clasificación de los hospitales en orden de preferencia. Supondremos que había más estudiantes graduándose de los que había plazas disponibles en los m hospitales.\\
@@ -401,6 +401,82 @@ Tercero, supongamos que hay una inestabilidad de tipo $(iii)$, que consiste en u
 
 Por último, supongamos que hay una inestabilidad de tipo $(iv)$, que consiste en un hombre $m$ y una mujer $w$, ninguno de los cuales es parte de ninguna pareja en el emparejamiento, de modo que $(m, w) \not\in F$. Pero para que $m$ esté soltero, debe haberle propuesto matrimonio a todas las mujeres no prohibidas; en particular, debe haberle propuesto matrimonio a $w$, lo que significa que ella ya no estaría soltera —una contradicción. $\blacksquare$\\
 
+\newpage
+
+\subsection{Práctico 1.2 (Primer parcial de 2019)} Considere una instancia del problema de emparejamiento estable entre un conjunto $M = \{m_1, m_2, m_3, m_4\}$ y otro $W = \{w_1, w_2, w_3, w_4\}$, con listas de preferencias dadas por las siguientes tablas. A modo de ejemplo, $m_1$ prefiere en primer lugar a $w_1$, mientras que para $w_1$ la mejor opción es $m_4$.
+
+\begin{center}
+\begin{minipage}{0.45\textwidth}
+\centering
+\begin{tabular}{ |c||c|c|c|c| } 
+ \hline
+ $m_1$ & $w_1$ & $w_2$ & $w_3$ & $w_4$\\ 
+ $m_2$ & $w_1$ & $w_4$ & $w_3$ & $w_2$\\ 
+ $m_3$ & $w_2$ & $w_1$ & $w_3$ & $w_4$\\ 
+ $m_4$ & $w_4$ & $w_2$ & $w_3$ & $w_1$\\
+ \hline
+\end{tabular}
+\end{minipage}
+\hfill
+\begin{minipage}{0.45\textwidth}
+\centering
+\begin{tabular}{ |c||c|c|c|c| } 
+ \hline
+ $w_1$ & $m_4$ & $m_3$ & $m_1$ & $m_2$\\ 
+ $w_2$ & $m_2$ & $m_4$ & $m_1$ & $m_3$\\ 
+ $w_3$ & $m_4$ & $m_1$ & $m_2$ & $m_3$\\ 
+ $w_4$ & $m_3$ & $m_2$ & $m_1$ & $m_4$\\
+ \hline
+\end{tabular}
+\end{minipage}
+\end{center}
+
+\begin{enumerate}[label=\alph*)]
+    \item Presente una sucesión de formaciones y separaciones de parejas que se realizan a lo largo de una ejecución del algoritmo de Gale-Shapley.
+    \item Repita la parte (a) invirtiendo los roles de $M$ y $W$.
+    \item Note que el emparejamiento estable que se forma en las partes anteriores es el mismo (a menos del orden en que se listan los componentes de cada pareja). Muestre que, en esta instancia del problema, para toda persona se verifica que su mejor pareja válida coincide con su peor pareja válida. ¿Qué resultados del libro está aplicando?
+    \item Concluya que para esta instancia del problema existe una \textbf{única} solución.
+\end{enumerate}
+
+\textbf{Solución:} 
+
+\begin{enumerate}[label=\alph*)]
+    \item Con $M$ en rol de proponente una ejecución posible da como resultado las siguientes formaciones y
+separaciones de parejas
+    \begin{enumerate}[label=\arabic*.]
+        \item Se forman $(m_1, w_1)$, $(m_3, w_2)$ y $(m_4, w_4)$.
+        \item Se separa $(m_4, w_4)$ y se forma $(m_2, w_4)$.
+        \item Se separa $(m_3, w_2)$ y se forma $(m_4, w_2)$.
+        \item Se separa $(m1, w1)$ y se forma $(m3, w1)$.
+        \item Se forma $(m1, w3)$.
+    \end{enumerate}
+    \item Con $W$ en rol de proponente una ejecución posible da como resultado las siguientes formaciones y
+separaciones de parejas
+    \begin{enumerate}[label=\arabic*.]
+        \item Se forman $(w_2, m_2)$, $(w_3, m_4)$ y $(w_4, m_3)$.
+        \item Se separa $(w_4, m_3)$ y se forma $(w_1, m_3)$.
+        \item . Se separa $(w_2, m_2)$ y se forma $(w_4, m_2)$.
+        \item Se separa $(w_3, m_4)$ y se forma $(w_2, m_4)$.
+        \item Se forma $(w_3, m_1)$.
+    \end{enumerate}
+    \item Cuando el rol de proponente lo lleva adelante el conjunto $X$, el algoritmo de Gale-Shapley forma
+parejas $(x, y)$, $x \in X$, tales que:
+    \begin{itemize}
+        \item $y$ es la persona de mayor preferencia para $x$ tal que $(x, y)$ son una pareja en algún emparejamiento estable
+        \item $x$ es la persona de menor preferencia para $y$ tal que $(x, y)$ son una pareja en algún emparejamiento estable.
+    \end{itemize}
+    En la instancia del problema presentada en este ejercicio, el emparejamiento estable que se forma es
+el mismo (a menos del orden en que se listan los componentes de cada pareja),
+
+$$S = {(w_1, m_3),(w_2, m_4),(w_3, m_1),(w_4, m_2)} ,$$
+tanto cuando $M$ propone como cuando $W$ propone. En consecuencia, para toda persona se verifica
+que su mejor pareja válida coincide con su peor pareja válida y, por lo tanto, esa es su única pareja
+posible en todo emparejamiento estable.
+
+\item Concluir último punto en base a lo anterior.
+\end{enumerate}
+
+\newpage
 \section{Notación Big O}
 \section{Grafos}
 \section{Greedy}
